// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Heading should render <h1> tag 1`] = `
<h1
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h1>
`;

exports[`Heading should render <h1> tag by default 1`] = `
<h1
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h1>
`;

exports[`Heading should render <h2> tag 1`] = `
<h2
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h2>
`;

exports[`Heading should render <h3> tag 1`] = `
<h3
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h3>
`;

exports[`Heading should render <h4> tag 1`] = `
<h4
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h4>
`;

exports[`Heading should render <h5> tag 1`] = `
<h5
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h5>
`;

exports[`Heading should render <h6> tag 1`] = `
<h6
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h6>
`;

exports[`Heading should render correctly 1`] = `
<h1
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h1>
`;

exports[`Heading should render innerHTML 1`] = `
<h1
  className="sc-bcXHqe klWJc"
  data-testid="heading"
>
  Testing
</h1>
`;
